--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ lib_deps =
 	esphome/ESPAsyncWebServer-esphome@^3.2.2
 	arduino-libraries/Stepper@^1.1.3
 lib_ldf_mode = deep
+board_build.filesystem = littlefs
+upload_port = COM4
 
 [env:nodemcu-12E]
 platform = espressif8266
