--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ monitor_speed = 115200
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.2.2
 	arduino-libraries/Stepper@^1.1.3
+	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.6
 lib_ldf_mode = deep
 board_build.filesystem = littlefs
 upload_port = COM4
@@ -28,4 +30,6 @@ monitor_speed = 115200
 lib_deps = 
 	esphome/ESPAsyncWebServer-esphome@^3.2.2
 	arduino-libraries/Stepper@^1.1.3
+	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.6
 lib_ldf_mode = deep
